--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       {{/each}}
-      <div class="logo">Created By Yunzai serie & iloli-plugin</div>
+      <div class="logo">Created By Yunzai && iloli-plugin</div>
     </div>
   </body>
 </html>
